# dqmc

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  environment-linux.yml  environment-macos.yml  environment.yml  pyproject.toml
.claude/skills/dqmc-advanced/: SKILL.md
.claude/skills/dqmc-analyze/: SKILL.md
.claude/skills/dqmc-dev/: SKILL.md
.claude/skills/dqmc-generate/: SKILL.md
.claude/skills/dqmc-parameter-scans/: SKILL.md
.claude/skills/dqmc-run/: SKILL.md
dqmc_util/: __init__.py  analyze_hub.py  cli.py  core.py  gen_1band_hub.py  gen_square_UV.py  get_mu.py  info.py  lattices.py  maxent.py  print_n.py  push.py  queue.py  summary.py  worker.py
examples/: README.md
examples/mz2_vs_T/: 1_generate_sim_files.py  2_run_local.sh  3_analyze_and_plot.py  INFO.md
examples/n_vs_mu/: 1_generate_sim_files.py  2_run_local.sh  3_analyze_and_plot.py  INFO.md
src/: data.c  data.h  dqmc.c  dqmc.h  eq_g.c  eq_g.h  greens.c  greens.h  io.c  io.h  linalg.h  main_1.c  main_mpi.c  main_stack.c  meas.c  meas.h  mem.c  mem.h  prof.c  prof.h  rand.h  sig.c  sig.h  time_.h  uneq_g.c  uneq_g.h  unused_updates.c  updates.c  updates.h  util.h  wrapper.c  wrapper.h
src/rc/: data.c  data.h  data_decl.h  dqmc.c  dqmc_decl.h  greens.c  greens.h  linalg.h  meas.c  meas.h  numeric.h  sim_types.h  updates.c  updates.h
src_py/: dqmc.py  ltdqmc.py
test/: Makefile  bench_linalg.c  test_greens.c
util/: analyze_hub.py  gen_1band.py  gen_1band_hub.py  gen_2lay.py  get_mu.py  info.py  maxent.py  print_n.py  push.py  summary.py  util.py
